[package]
name = "pp-audiograph"
version = "0.1.0"
edition = "2024"
authors = ["Piotr Palka <coding@pressplay-music.com>"]
description = "Realtime audio processing graph library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pressplay-music/audiograph"
readme = "README.md"
keywords = ["audio", "dsp", "graph"]
categories = ["multimedia::audio"]
include = ["src/**", "Cargo.toml", "build.rs", "README.md", "LICENSE*"]

[lib]
name = "audiograph"
path = "src/lib.rs"

[dependencies]
bitvec = "1.0.1"
num = "0.4.3"
petgraph = "0.7.1"

[workspace]
members = ["examples"]
