[package]
name = "audiograph-examples"
version = "0.2.0"
edition = "2024"
publish = false

[[bin]]
name = "cpal_sine"
path = "src/cpal_sine.rs"

[[bin]]
name = "channel_layouts"
path = "src/channel_layouts.rs"

[dependencies]
audiograph = { path = ".." }
clap = { version = "4.5.45", features = ["derive"] }
cpal = "0.16.0"
